--- a/app/src/main/assets/www/views/mobile2.html
+++ b/app/src/main/assets/www/views/mobile2.html
@@ -6,7 +6,7 @@
 
     <!-- 移动设备支持 -->
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-    <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+    <!--<meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">-->
     <meta content="no-cache,must-revalidate" http-equiv="Cache-Control">
     <meta content="no-cache" http-equiv="pragma">
     <meta content="0" http-equiv="expires">
@@ -29,7 +29,41 @@
     <!--上下滚动 start-->
     <section class="m-page hide" >
         <div class="m-img" >
-            <div class="stage-content edit-area pages-img pages-img-bg" style="background: url(../public/img/bg.png);background-size: 50% 50%;background-position:cover;width:100%;height:100%;" data="600,900"><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style=""  src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div><div class="symbol" style="z-index: 2;"> <div class="pages-img edit-area"><img data-name="img1" style="" src="/mnt/sdcard/wisape/com.wisape.android/data/template/dddddddddddd/img/icon-earth.png" width="50" height="50" /> </div> </div> <div class="symbol" style="z-index: 3;"> <div class="pages-txt edit-area" style="margin:70px auto;width:150px;color:#fff;text-align: center;" data-animation="animated slideInDown">>As c update of the classictranslation corpus, the combination of network technology and language essence </div> </div> </div>
+            <div class="stage-content edit-area pages-img pages-img-bg" style=" text-align:center;word-break:break-all;display: box;display: -webkit-box;display: -moz-box;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-align:center;-moz-box-align:center;background: url(img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
+                <div class="stage-content edit-area pages-img pages-img-bg" style=" text-align:center;word-break:break-all;display: box;display: -webkit-box;display: -moz-box;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-align:center;-moz-box-align:center;background: url(img/bg.jpg);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
+                    <div class="stage-content-box" style="-webkit-transform-origin:0 0;">
+
+                        <div style="width:12.14rem;margin:3.5rem 1.929rem;padding:5.18rem 0 1.18rem 0;background-color: rgba(255,255,255,0.5);border-radius: 0.5rem;position:relative;">
+                            <div class="symbol" style="z-index: 999; display: inline-block;top: -2rem; position: absolute; margin-left: -3rem;">
+                                <div class="pages-img edit-area">
+                                    <img data-name="img1" style="width:5.4rem;height:5.4rem;border-radius: 2.7rem;border:0.3rem solid #fff;" src="img/t.jpg"></div>
+                            </div>
+                            <div class="symbol" style="z-index: 3;">
+                                <div class="pages-txt edit-area" style="font-size:0.78rem;color:#000;font-weight: bold">
+                                    JackeyWisape
+                                </div>
+                            </div>
+                            <div class="symbol" style="z-index: 3;">
+                                <div class="pages-txt edit-area" style="font-size:0.533rem;color:#000;">
+                                    Co-founder
+                                </div>
+                            </div>
+                            <div class="symbol" style="z-index: 3;">
+                                <div class="pages-txt edit-area" style="margin-top:1rem;font-size:0.444rem;line-height:0.888rem;color:#448aff;text-decoration:underline;">
+                                    Email: support@wisape.com<br>
+                                    Tel:(702) 825-1558<br>
+                                    Tel:(702) 825-1558<br>
+                                    Site:www.wisape.com<br>
+                                    Adress:Room 8001 California, Mountain View,<br>
+                                    Amphitheatre Pkwy
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
     </section>
     <section class="m-page hide" >
