--- a/app/src/main/assets/www/public/css/editor_index.css
+++ b/app/src/main/assets/www/public/css/editor_index.css
@@ -215,10 +215,16 @@ a {text-decoration: none;color:inherit;}
 .icon-font-reduce.disable {
     background-image: url(../img/reduce-font-disable.png);
 }
-.header{
-    height: 48px;line-height: 48px;
+.icon-rtol {
+    background-image: url(../img/rtol.png);
 }
-.header .tit {vertical-align: top;font-size:20px;color:#2d3437;margin-left:10px;}
+.icon-rtol.active {
+    background-image: url(../img/rtol-active.png);
+}
+.header{
+    height: 2.37rem;line-height: 2.37rem;overflow: hidden;
+}
+.header .tit {vertical-align: top;font-size:0.8rem;color:#2d3437;margin-left:0.4rem;}
 .header .icon-arrow-left,
 .header .icon-play,
 .header .icon-layout,
@@ -227,12 +233,12 @@ a {text-decoration: none;color:inherit;}
 .header .icon-pencil,
 .header .icon-dustbin,
 .header .imgIco-edit-image{
-    width: 48px;
-    height: 48px;
+    width: 2.37rem;
+    height: 2.37rem;
     background-size: auto 40%;
 }
 
-.download-progress-bar {width: 60px; height: 6px; background: #d4d5d5; border-radius: 5px; overflow: hidden}
+.download-progress-bar {width: 0.8rem; height: 0.25rem; background: #d4d5d5; border-radius: 0.25rem; overflow: hidden}
 .download-progress-percent {width:0%;background:#f08308;height:6px;}
 
 .tpl-item {position: relative;border-radius: 10px;overflow: hidden;margin:0 auto;}
@@ -251,89 +257,99 @@ a {text-decoration: none;color:inherit;}
 .tpl-page-cat .hd li {
     display:block;
     float:left;
-    height:45px;
-    width:100px;
-    line-height: 45px;
+    height:2.07rem;
+    line-height: 2.07rem;
     color:#2d3437;
-    padding:0 20px;
+    margin:0 0.2rem 0 0;
+    padding:0 0.5rem;
+    font-size:0.71rem;
     border-bottom:2px solid #f5f5f5;
 }
 .tpl-page-cat .hd li.active {
     color:#52b502;
     border-bottom:2px solid #52b502;
 }
-.tpl-page-cat .bd {padding:15px 0;height:140px;width:100%;position:relative;overflow: hidden; }
+.tpl-page-cat .bd {padding:0.71rem 0;height:6.45rem;width:100%;position:relative;overflow: hidden; }
 .tpl-page-cat .bd ul {position: absolute; z-index: 1;}
-.tpl-page-item {width:70px;height:110px;float:left;position: relative;margin-left:15px;}
+.tpl-page-item {width:2.96rem;height:5.03rem;float:left;position: relative;margin-left:0.59rem;overflow: hidden;box-sizing: border-box;}
 .tpl-page-item .icon-tags-hot,.tpl-page-item .icon-tags-new {display:none;width:18px;height:28px;position: absolute;left:0;top:0;}
-.tpl-page-item .stage-thumb {width:70px;height:110px;}
-.tpl-page-item-name {font-size:14px;color:#fff;font-weight:bold;background-color:rgba(0,0,0,0.4);padding:5px 0;text-align: center;position: absolute;bottom:0;width:70px;left:0;}
-.tpl-page-item .icon-download {display:block;width:20px;height:20px;position: absolute;bottom:35px;right:5px;}
-.tpl-page-item .download-progress-bar { position: absolute; left: 5px; bottom: 35px;}
-.tpl-page-item.active {border:1px solid #bbb;}
+.tpl-page-item .stage-thumb {width:100%;height:100%;}
+.tpl-page-item-name {font-size:0.6rem;height:1rem;line-height:1rem;overflow:hidden;color:#fff;font-weight:bold;background-color:rgba(0,0,0,0.4);padding:0.07rem 0;text-align: center;position: absolute;bottom:0;width:2.96rem;left:0;}
+.tpl-page-item .icon-download {display:block;width:0.9rem;height:0.9rem;position: absolute;bottom:1.1rem;right:0.2rem;}
+.tpl-page-item .download-progress-bar { position: absolute; left: 0.15rem; bottom: 1.2rem;width:2.66rem;}
+.tpl-page-item.active {border:0.1rem solid #52b502;}
 
-.pages {width:100%;padding:15px 0;height:310px;position:relative;overflow: hidden;}
-.pages li {width:200px;height:280px;float:left;position: relative;margin-left:15px;opacity: 0.5;}
+.pages {width:100%;height:13.4rem;margin:0.8rem 0;position:relative;overflow: hidden;}
+.pages li {width:9.78rem;height:13.4rem;float:left;position: relative;margin-left:1.2rem;opacity: 0.5;}
 .pages li.active  {opacity: 1}
 .pages li .count {z-index:999;position: absolute;left:0;bottom:0;background:rgba(82,181,2,0.5);color:#fff;font-size:14px;padding:2px 6px;}
 .pages-item .pages-item-thumb {width:100%;}
+.pages .stage-content {border-radius: 0.2rem;}
 
 .story-page-list {width:100%;overflow: hidden}
 .story-page-list .icon-correct {
     display: none;
-    width: 48px;
-    height: 48px;
+    width: 2.37rem;
+    height: 2.37rem;
     background-size: auto 50%;
     position: absolute;
-    bottom:-5px;
-    right:-5px;
+    bottom:-0.007rem;
+    right:-0.007rem;
     z-index: 999;
 }
 .story-page-list .selected  .icon-correct {display: block}
+.story-page-list {padding-left:0.2rem;}
 .story-page-list .tpl-page-item {
-    width:30%;
-    height: auto;
-    margin:10px 0 10px 3%;
+    width:4.7rem;
+    height: 6.43rem;
+    margin:0rem 0 0.44rem 0.41rem;
     display: inline-block;
+    border-radius: 0.2rem;
+    overflow: hidden;
 
 }
 .story-page-list .tpl-page-item img {width:100%;height:auto;}
 
 /*editor-text*/
-.pop-active {padding-bottom:150px;}
-.font-resize span.opt-right span {width:45px;height:30px;}
-.pop-editer-opt,.pop-editer-font,.pop-editer-color,.pop-editer-animation  {position: fixed;bottom:0;left:0;width:100%;background:#fff;text-align: left;}
-.pop-editer-opt .hd,.pop-editer-font .hd,.pop-editer-color .hd,.pop-editer-animation .hd  {height:48px;background:#f2f2f2;border-top:1px solid #d5d6d7;border-bottom:1px solid #d5d6d7;line-height: 48px;}
-.pop-editer-opt .hd i,.pop-editer-font .hd i,.pop-editer-color .hd i,.pop-editer-animation .hd i {float:left;width:25%;height:48px;background-size: auto 30%;}
-.pop-editer-opt .opt-name  {color:#2d3437;font-size:14px;line-height:30px;}
-.pop-editer-opt .bd,.pop-editer-font .bd,.pop-editer-color .bd,.pop-editer-animation .bd {background:#fff;height:164px;overflow: scroll;width:100%;}
-.pop-editer-opt .item {border-bottom:1px solid #d5d6d7;padding:10px;overflow: hidden}
+.pop-active {padding-bottom:12.32rem;}
+.font-resize span.opt-right span {width:2.51rem;height:1.48rem;}
+.pop-editer-opt,.pop-editer-font,.pop-editer-color,.pop-editer-animation,.pop-editer-text  {position: fixed;bottom:0;left:0;width:100%;background:#fff;text-align: left;}
+.pop-editer-opt .hd,.pop-editer-font .hd,.pop-editer-color .hd,.pop-editer-animation .hd  {height:2.51rem;background:#f2f2f2;border-top:1px solid #d5d6d7;border-bottom:1px solid #d5d6d7;line-height: 2.51rem;}
+.pop-editer-opt .hd i,.pop-editer-font .hd i,.pop-editer-color .hd i,.pop-editer-animation .hd i {float:left;width:25%;height:2.51rem;background-size: auto 30%;}
+.pop-editer-opt .opt-name  {color:#2d3437;font-size:0.66rem;line-height:1.48rem;}
+.pop-editer-opt .bd,.pop-editer-font .bd,.pop-editer-color .bd,.pop-editer-animation .bd {background:#fff;height:7.11rem;overflow: scroll;width:100%;}
+.pop-editer-opt .item {border-bottom:1px solid #d5d6d7;padding:0.44rem 0.66rem;overflow: hidden}
 .pop-editer-opt .item:last-child {border:none;}
-.pop-editer-opt .opt-right,.pop-editer-font .opt-right {float:right;color:#19c702;line-height: 30px;}
-.pop-editer-opt .opt-right i.icon-arrow-right-list {width:10px;height:25px;background-size: auto 80%;margin-left:5px;vertical-align:middle;}
+.pop-editer-opt .opt-right,.pop-editer-font .opt-right {float:right;color:#19c702;line-height:0.44rem;}
+.pop-editer-opt .opt-right i.icon-arrow-right-list {margin-top: 0.3rem;width:0.44rem;height:0.88rem;background-size: auto 80%;margin-left:.37rem;vertical-align:middle;}
 .pop-editer-opt .opt-val {float:left;}
-.pop-editer-opt .opt-color-val {background:#fff;border:1px solid #ddd;width:25px;height:25px;display:inline-block;border-radius: 20px;float:left;}
-.pop-editer-opt .opt-animation-val i {float:left;display: inline-block;width:25px;height:25px;background-size: 100% 100%;border-radius: 20px;border:1px solid #52b502;}
+.pop-editer-opt .opt-color-val {margin-top:0.3rem;background:#fff;border:1px solid #ddd;width:0.88rem;height:0.88rem;display:inline-block;border-radius: 0.88rem;float:left;}
+.pop-editer-opt .opt-animation-val i {margin-top: 0.3rem;float:left;display: inline-block;width:0.88rem;height:0.88rem;background-size: 100% 100%;border-radius: 0.88rem;border:1px solid #52b502;}
+.pop-editer-opt .opt-font-val {margin-top: 0.5rem;float:left;font-size:0.622rem;}
+.pop-editer-text {background: #f2f2f2;padding:0.44rem 0.59rem;}
+.pop-editer-text .textarea-word {position:relative;height:1.48rem;width:12.6rem;color:#2d3437;font-size:1rem;resize: none;overflow-y:visible;border-radius: 0.15rem;border:1px solid #d6d7d8;background: #fff;-webkit-appearance:none;outline:none;max-height: 4rem;line-height: 1.25rem}
+.btn-text-done {color:#2d3437;font-size:0.71rem;}
+.btn-text-del {position: absolute;left:0;top:0;}
 
-.pop-editer-font .tit,.pop-editer-color .tit,.pop-editer-animation .tit {vertical-align: top; font-size: 18px; color: #2d3437; margin-left: 10px;}
+.pop-editer-font .tit,.pop-editer-color .tit,.pop-editer-animation .tit {vertical-align: middle; font-size:0.8rem; color: #2d3437; margin-left: 0.4rem;}
 .pop-editer-font .hd i,.pop-editer-color .hd i,.pop-editer-animation .hd i {width:48px;}
-.pop-editer-font .item {padding:8px 3%;float:left;clear:both;box-sizing:content-box;width:94%;margin:1px 0;height:20px;line-height: 20px;}
+.pop-editer-font .item {padding:0.63rem 3%;float:left;clear:both;box-sizing:content-box;width:94%;height:1rem;line-height:1rem;}
 .pop-editer-font .bd {width:100%;overflow: scroll}
-.pop-editer-font .bd i {width:20px;height:20px;background-size: auto 100%;}
-.pop-editer-font .download-progress-bar {margin-top:6px;}
+.pop-editer-font .bd i {width:1rem;height:1rem;background-size: auto 100%;}
+.pop-editer-font .download-progress-bar {width: 2.8rem; height: 0.25rem; background: #d4d5d5; border-radius: 0.25rem; margin-top:.45rem}
 .pop-editer-font img {height:30px;max-width:200px;vertical-align: middle}
 .pop-editer-font .icon-download,.pop-editer-font .download-progress-bar,.pop-editer-font .icon-correct  {display: none}
 .pop-editer-font .download .icon-download {display: inline-block}
 .pop-editer-font .item.selected .icon-correct {display: inline-block!important;}
 .pop-editer-font .opt-name {float:left;display: inline-block;}
 .pop-editer-font .opt-right {}
-.pop-editer-color .bd {padding:20px;}
+.pop-editer-color .bd {padding:0.74rem;}
 .color-main, .color-sub {width: 100%;overflow: hidden}
-.color-main .color-main-item {float:left;width:10%;height:30px;background:red;}
-.color-sub {margin-top:15px;}
-.color-sub .color-sub-item {float:left;width:25%;height:35px;background:red;position: relative;text-align:center;}
+.color-main .color-main-item {float:left;width:10%;height:0.88rem;}
+.color-sub {margin-top:1.04rem;}
+.color-sub .color-sub-item {float:left;width:25%;height:1.777rem;position: relative;text-align:center;}
 .color-sub .color-sub-item i{
-    width:30px;height:30px;
+    width:1.777rem;height:1.777rem;
     vertical-align: middle;
     display: none;
     background-repeat: no-repeat;
@@ -343,12 +359,12 @@ a {text-decoration: none;color:inherit;}
 }
 .color-sub .color-sub-item.selected i {display: inline-block}
 
-.pop-editer-animation .bd {overflow: scroll;width:100%;padding:15px 0;}
-.pop-editer-animation .anim-item {width:20%;display: inline-block;float:left;text-align: center;margin:5px 0;}
-.pop-editer-animation .anim-item i {display: inline-block;width:35px;height:35px;background-size: 100% 100%;border-radius: 30px;border:1px solid #ddd;}
+.pop-editer-animation .bd {overflow: scroll;width:100%;padding:0.5rem 0;}
+.pop-editer-animation .anim-item {width:20%;display: inline-block;float:left;text-align: center;margin:0.3rem 0;}
+.pop-editer-animation .anim-item i {display: inline-block;width:2.07rem;height:2.07rem;background-size: 100% 100%;border-radius: 2.07rem;border:1px solid #ddd;}
 .pop-editer-animation .anim-item i.active {border-color:#52b502;}
 .pop-editer-animation .anim-item .anim-name {padding:5px 0;display: block;}
-.icon-add-stage {width:60px;height:60px;position: fixed;bottom:20px;right:20px;z-index: 9999;}
+.icon-add-stage {width:2.44rem;height:2.44rem;position: fixed;bottom:0.71rem;right:0.71rem;z-index: 9999;}
 
 .ui-dialog{
     overflow: hidden;
@@ -401,16 +417,26 @@ a {text-decoration: none;color:inherit;}
 .ui-dialog-btns a.btn-submit {color:green;}
 .input-href {width:100%;padding:10px 0;border-bottom:1px solid green;}
 .input-href input {border:none;}
+.font-link {text-decoration: underline!important;color:#448aff!important;}
 
 .stage { border-radius: 5px;overflow: hidden;}
 #editorText {text-align: center;}
-#editorText .pages {width:190px;margin:20px auto;}
+#editorText .pages {width:11.2rem;height:15.34rem;margin:0.5rem 2.4rem;}
 #editorText .pages .count {display: none}
-.stage-content .symbol img ,.stage-content .symbol .pages-txt  {
+.stage-content .stage-content-box {
+    -moz-transform:scale(0.61);
+    -webkit-transform:scale(0.61);
+    -o-transform:scale(0.61);
+}
+.story-page-list .stage-content-box {
+    -moz-transform:scale(0.3);
+    -webkit-transform:scale(0.3);
+    -o-transform:scale(0.3);
+}
+#editorText .stage-content-box  {
     -moz-transform:scale(0.7);
     -webkit-transform:scale(0.7);
     -o-transform:scale(0.7);
-    -webkit-transform-origin: 50% 0%;
 }
 
 .stage-content .edit-area {display:inline-block;position: relative;}
@@ -419,9 +445,8 @@ a {text-decoration: none;color:inherit;}
 .pages-txt.edit-area.active {border-color:#ffe400;}
 .edit-area.active>.ico-acitve {display: block;}
 
-.drag-handle {display:none;position: absolute; top: 0px; right: 0px; bottom:0;left:0;background: #000; width:100%;height:100%;opacity: 0}
+.drag-handle {display:none;position: absolute; top: 0px; right: 0px; bottom:0;left:0;background: #000; width:100%;height:100%;opacity: 0;z-index: 10000;}
 li.selected .drag-handle {display: block;}
-.story-page-list .symbol {visibility: hidden;}
 .story-page-list .count {display: none}
 
 
