--- a/app/src/main/res/layout/layout_photo_bucket.xml
+++ b/app/src/main/res/layout/layout_photo_bucket.xml
@@ -1,43 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/imgv_bucket_thumb"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
+        android:layout_gravity="center_vertical"
+        android:padding="12dp"
         />
 
-    <com.wisape.android.view.TextView
-        android:id="@+id/txtv_bucket_title"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:textColor="@android:color/black"
-        android:layout_toEndOf="@+id/imgv_bucket_thumb"
-        android:layout_toRightOf="@+id/imgv_bucket_thumb"/>
+        android:layout_gravity="center_vertical"
+        android:orientation="vertical">
 
-    <com.wisape.android.view.TextView
-        android:id="@+id/txtv_bucket_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:textColor="@android:color/black"
-        android:layout_toEndOf="@+id/imgv_bucket_thumb"
-        android:layout_toRightOf="@+id/imgv_bucket_thumb"/>
+        <com.wisape.android.view.TextView
+            android:id="@+id/txtv_bucket_title"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:textColor="#2d3437"
+            android:textSize="16sp"
+            android:layout_gravity="center_vertical" />
+
+        <com.wisape.android.view.TextView
+            android:id="@+id/txtv_bucket_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#2d3437"
+            android:textSize="12sp"
+            android:layout_marginTop="12dp"
+           />
+    </LinearLayout>
+
+
 
     <ImageView
         android:id="@+id/imgv_bucket_selected"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:visibility="gone"
+        android:layout_gravity="center_vertical"
        />
-</RelativeLayout>
+</LinearLayout>
