--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,6 +15,9 @@
         <item name="android:textColorSecondary">@color/app_primary</item>
         <item name="android:textColorTertiary">@color/app_primary</item>
 
+        <item name="android:listDivider">@drawable/divider_for_list</item>
+
+
         <item name="signUpTextCursorDrawable">@null</item>
     </style>
     <style name="AppTheme.NoActionBar" parent="AppTheme">
