--- a/app/src/main/res/drawable/divider_for_list.xml
+++ b/app/src/main/res/drawable/divider_for_list.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/app_primary_transparent_10p"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle" >
+
+    <gradient
+        android:centerColor="@color/app_sixth_transparent_50p"
+        android:endColor="@color/app_sixth_transparent_50p"
+        android:startColor="@color/app_sixth_transparent_50p"
+        android:type="linear" />
+    <size android:height="0.5dp"/>
+
 </shape>
