--- a/app/src/main/res/layout/fragment_photo_buckets.xml
+++ b/app/src/main/res/layout/fragment_photo_buckets.xml
@@ -4,4 +4,5 @@
     android:id="@+id/photo_buckets"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="12dp"
     android:background="?android:attr/windowBackground"/>
