--- a/app/src/main/res/layout/item_card_gallery.xml
+++ b/app/src/main/res/layout/item_card_gallery.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.percent.PercentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_marginBottom="100dp">
@@ -9,22 +9,23 @@
         android:layout_height="15dp"
         android:layout_marginLeft="45dp"
         android:layout_marginRight="45dp"
-        android:background="@color/app_main_first_bg"/>
+        android:background="@color/app_main_first_bg" />
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="15dp"
-        android:layout_marginTop="15dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:background="@color/app_main_second_bg"/>
+        android:layout_marginTop="15dp"
+        android:background="@color/app_main_second_bg" />
 
     <RelativeLayout
         android:id="@+id/story_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="15dp"
         android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/navbg">
 
         <TextView
@@ -32,8 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:background="@mipmap/icon_label"
-            android:text="publish"/>
+            android:background="@mipmap/icon_label" />
 
         <TextView
             android:id="@+id/text_story_title"
@@ -41,39 +41,23 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/text_story_state"
             android:layout_marginTop="30dp"
-            android:gravity="center"
-            android:text="MADE WITH LOVE"/>
+            android:gravity="center"/>
 
         <View
             android:id="@+id/view_divider"
             android:layout_width="80dp"
             android:layout_height="2dp"
             android:layout_below="@+id/text_story_title"
-            android:layout_marginTop="20dp"
             android:layout_centerHorizontal="true"
-            android:background="@color/app_primary"
-            />
+            android:layout_marginTop="20dp"
+            android:background="@color/app_primary" />
 
         <TextView
             android:id="@+id/text_story_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/view_divider"
-            android:layout_marginTop="15dp"
-            />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true">
-
-
-        </LinearLayout>
-
-
+            android:layout_marginTop="15dp" />
 
     </RelativeLayout>
-
-
-
-</FrameLayout>
+</android.support.percent.PercentFrameLayout>
