--- a/app/src/main/res/layout/layout_main_view_card_item.xml
+++ b/app/src/main/res/layout/layout_main_view_card_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fresco="http://schemas.android.com/apk/res-auto"
-    android:layout_width="234dp"
+    android:layout_width="264dp"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -30,6 +29,7 @@
             android:gravity="center" />
 
         <LinearLayout
+            android:id="@+id/linear_share"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
