--- a/app/src/main/res/layout/layout_photo_bucket.xml
+++ b/app/src/main/res/layout/layout_photo_bucket.xml
@@ -10,13 +10,15 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center_vertical"
-        android:padding="12dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="12dp"
         />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:layout_marginLeft="12dp"
         android:orientation="vertical">
 
         <com.wisape.android.view.TextView
@@ -24,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:textColor="#2d3437"
+            android:textColor="@color/app_sixth"
             android:textSize="16sp"
             android:layout_gravity="center_vertical" />
 
@@ -32,7 +34,7 @@
             android:id="@+id/txtv_bucket_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#2d3437"
+            android:textColor="@color/app_sixth_transparent_50p"
             android:textSize="12sp"
             android:layout_marginTop="12dp"
            />
