--- a/app/src/main/res/layout/fragment_card_gallery.xml
+++ b/app/src/main/res/layout/fragment_card_gallery.xml
@@ -1,37 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff">
+    android:background="#ffffff"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/head_bar_layout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_heightPercent="10%"
-        app:layout_widthPercent="100%">
-
+        android:padding="12dp">
 
         <ImageView
             android:id="@+id/menu_switch"
-            android:layout_marginLeft="24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
             android:layout_gravity="center_vertical"
             android:background="@mipmap/icon_nav" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="12dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:text="@string/my_stores"
-            android:layout_marginLeft="12dp"
             android:textColor="@color/app_sixth"
-            android:textSize="@dimen/app_text_size_xlarge" />
+            android:textSize="16sp" />
 
         <RelativeLayout
             android:id="@+id/info_board"
@@ -66,23 +63,20 @@
 
     <com.wisape.android.view.GalleryView
         android:id="@+id/card_gallery"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_below="@id/head_bar_layout"
         android:layout_marginBottom="12dp"
         android:layout_marginTop="@dimen/span_space"
         android:layout_weight="1"
-        app:layout_heightPercent="70%"
+        app:layout_heightPercent="74%"
         app:layout_widthPercent="100%" />
 
 
     <Button
         android:id="@+id/add_story"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/card_gallery"
-        android:layout_marginBottom="@dimen/span_space"
-        android:layout_marginRight="@dimen/span_space"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_gravity="right"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/btn_add_story_selector" />
-</android.support.percent.PercentRelativeLayout>
+</LinearLayout>
