--- a/app/src/main/res/layout/layout_main_view_card_item.xml
+++ b/app/src/main/res/layout/layout_main_view_card_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/liner_item"
     android:layout_width="264dp"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -36,7 +37,7 @@
             android:alpha="0.5"
             android:background="@drawable/gallery_item_shadow_bg"
             android:orientation="horizontal"
-            android:padding="10dp">
+            android:padding="14dp">
 
             <TextView
                 android:id="@+id/text_eye_count"
@@ -101,7 +102,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:gravity="center"
-        android:textColor="#2d3437"
-        android:textSize="24sp" />
-
+        android:textColor="@color/app_sixth_transparent_50p"
+        android:textSize="16sp" />
+[
 </LinearLayout>
