--- a/app/src/main/assets/www/views/index.html
+++ b/app/src/main/assets/www/views/index.html
@@ -266,7 +266,7 @@
 
 <script src="../public/js/template.js"></script>
 <script src="../public/js/hammer.min.js"></script>
-<script src="../public/js/iScroll-5.1.2-wids.js"></script>
+<script src="../public/js/iScroll.js"></script>
 <script src="../public/js/animation.js"></script>
 
 <script src="../public/js/app-main.js"></script>
@@ -411,10 +411,6 @@
             console.info(type + " done!!!");
         })
     }
-
-
-
-
 </script>
 <script>
     $(function(){
