--- a/app/src/main/assets/www/views/test.html
+++ b/app/src/main/assets/www/views/test.html
@@ -235,8 +235,8 @@
 
 </div>
 
-<div class="ui-mask" style="display: none; width: 100%; height: 671px;"></div>
-<div class="ui-dialog href-dialog" style="width: 300px; height: 200px; display: none; left: 50%; margin-left: -150px; top: 50%; margin-top: -100px;">
+<div class="ui-mask" style="display: none;"></div>
+<div class="ui-dialog href-dialog" style="width: 300px; height: 220px; display: none; left: 50%; margin-left: -150px; top: 50%; margin-top: -110px;">
     <div class="ui-dialog-title">Set Destination</div>
     <div class="ui-dialog-content">
         <div class="input-href">
@@ -248,13 +248,13 @@
         <a class="ui-btn btn-submit">Confirm</a>
     </div>
 </div>
-<div class="ui-dialog tip-dialog" style="width: 300px; height: 200px; display: none; left: 50%; margin-left: -150px; top: 50%; margin-top: -100px;">
+<div class="ui-dialog tip-dialog" style="width: 300px; height: 220px; display: none; left: 50%; margin-left: -150px; top: 50%; margin-top: -100px;">
     <div class="ui-dialog-title"></div>
     <div class="ui-dialog-content">
         This story should not exceed 15 pages.
     </div>
     <div class="ui-dialog-btns">
-        <a class="ui-btn btn-submit">Close</a>
+        <a class="ui-btn btn-cancle">Close</a>
     </div>
 </div>
 
@@ -265,7 +265,7 @@
 
 <script src="../public/js/template.js"></script>
 <script src="../public/js/hammer.min.js"></script>
-<script src="../public/js/iScroll-5.1.2-wids.js"></script>
+<script src="../public/js/iscroll-lite.js"></script>
 <script src="../public/js/animation.js"></script>
 
 <script src="../public/js/app-main.js"></script>
@@ -424,7 +424,7 @@
 <script>
     $(function(){
 
-        FastClick.attach(document.body);
+        //FastClick.attach(document.body);
 
 
         var ColorArr = [
