--- a/app/src/main/assets/www/views/tpl.html
+++ b/app/src/main/assets/www/views/tpl.html
@@ -1,111 +1,44 @@
 "
-<div class=\"p-index main\" id=\"con\">
-<section class=\"m-page hide pages-item\" >
-<div class=\"m-img\">
-    <div class=\"stage-content edit-area pages-img pages-img-bg\
-    " style=\" text-align:center;word-break:break-all;display: box;display: -webkit-box;display:
-    -moz-box;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-align:center;-moz-box-align:center;background:
-    url(/mnt/sdcard/wisape/com.wisape.android/data/story/20151013013316/img/bg.jpg);background-size:
-    cover;background-position:50% 50%;width:100%;height:100%;position: relative;\">
-    <div class=\"stage-content-box\" style=\"-webkit-transform-origin:0 0;\
-    ">
-    <div style=\"float:left;width:12.14rem;margin:3.5rem 1.929rem;padding:5.18rem 0 1.18rem 0;background-color:
-         rgba(255,255,255,0.5);border-radius: 0.5rem;position:relative;\
-    "> \t
-    <div class=\"symbol\" style=\"z-index: 999; display: inline-block;top: -2rem; position: absolute;
-         left:50%;margin-left: -3rem;\
-    ">\t
-    <div class=\"pages-img edit-area\
-    ">\t <img data-name=\"img1\" style=\"width:5.4rem;height:5.4rem;border-radius: 2.7rem;border:0.3rem solid #fff;\"
-    src=\"/mnt/sdcard/wisape/com.wisape.android/data/story/20151013013316/img/t.jpg\">
-</div>\t                        </div>
-<div class=\"symbol\" style=\"z-index: 3;\">
-<div class=\"pages-txt
-     edit-area\" style=\"font-size:0.78rem;color:#000;font-weight: bold\">                                    JackeyWisape                                </div>                            </div>
-<div class=\"symbol\" style=\"z-index: 3;\">
-<div class=\"pages-txt
-     edit-area\" style=\"font-size:0.533rem;color:#000;\">                                    Co-founder                                </div>                            </div>
-<div class=\"symbol\" style=\"z-index: 3;\">
-<div class=\"pages-txt
-     edit-area\" style=\"margin-top:1rem;font-size:0.444rem;line-height:0.888rem;color:#448aff;text-decoration:underline;\">                                    Email: support@wisape.com
-<br>                                    Tel:(702) 825-1558<br>                                    Tel:(702) 825-1558
-<br>                                    Site:www.wisape.com
-<br>                                    Adress:Room 8001 California, Mountain View,
-<br>                                    Amphitheatre Pkwy                                </div>                            </div>                        </div>                    </div>                </div>            </div> </section>
-<section class=\"m-page hide pages-item\" >
-<div class=\"m-img\"><span class=\"count\">2/4</span>
-
-    <div class=\"stage-content edit-area pages-img pages-img-bg\
-    " style=\"background: url(/mnt/sdcard/wisape/com.wisape.android/data/story/20151013013316/img/bg.jpg?type=stage&amp;id=91);background-size:
-    cover;background-position:50% 50%;width:100%;height:100%;\">
-    <div class=\"symbol\" style=\"display:inline-block;\">
-        <div class=\"pages-img edit-area\
-        "><img data-name=\"img1\" style=\"\" width=\"50\" height=\"50\"
-               src=\"/mnt/sdcard/wisape/com.wisape.android/data/story/20151013013316/img/icon-earth.png?type=stage&amp;id=91\">
+<div class="stage-content edit-area pages-img pages-img-bg"
+     style=" text-align:center;word-break:break-all;display: box;display: -webkit-box;display: -moz-box;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-align:center;-moz-box-align:center;background: url(/storage/emulated/0/wisape/com.wisape.android/data/story/20151017093232/ume/img/bg.jpg?type=stage&amp;id=98);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
+    <div class="stage-content-box" style="-webkit-transform-origin:0 0;">
+        <div style="float:left;width:12.14rem;margin:3.5rem 1.929rem;padding:5.18rem 0 1.18rem 0;background-color: rgba(255,255,255,0.5);border-radius: 0.5rem;position:relative;">
+            <div class="symbol"
+                 style="z-index: 999; display: inline-block;top: -2rem; position: absolute; left:50%;margin-left: -3rem;">
+                <div class="pages-img edit-area"><img data-name="img1"
+                                                      style="width:5.4rem;height:5.4rem;border-radius: 2.7rem;border:0.3rem solid #fff;"
+                                                      src="/storage/emulated/0/wisape/com.wisape.android/data/story/20151017093232/ume/img/t.jpg?type=stage&amp;id=98">
+                </div>
+            </div>
+            <div class="symbol" style="z-index: 3;">
+                <div class="pages-txt edit-area" style="font-size:0.78rem;color:#000;font-weight: bold"> JackeyWisape
+                </div>
+            </div>
+            <div class="symbol" style="z-index: 3;">
+                <div class="pages-txt edit-area" style="font-size:0.533rem;color:#000;"> Co-founder</div>
+            </div>
+            <div class="symbol" style="z-index: 3;">
+                <div class="pages-txt edit-area"
+                     style="margin-top:1rem;font-size:0.444rem;line-height:0.888rem;color:#448aff;text-decoration:underline;">
+                    Email: support@wisape.com<br> Tel:(702) 825-1558<br> Tel:(702) 825-1558<br> Site:www.wisape.com<br>
+                    Adress:Room 8001 California, Mountain View,<br> Amphitheatre Pkwy
+                </div>
+            </div>
+        </div>
     </div>
-</div>
-<div class=\"symbol\" style=\"z-index: 3;\">
-<div class=\"pages-txt edit-area
-     active\" data-animation=\"animated slideInUp\" style=\"margin:20% 10% 0 10%;width:80%;color:#fff;text-align: center;font-size:18px;\">asdfasdasfadsfasdf As c update of the classictranslation corpus, the combination of network technology and language essence                </div>            </div>        </div></div> </section>
-<section class=\"m-page hide pages-item\" >
-<div class=\"m-img\">
-    <div class=\"stage-content edit-area pages-img pages-img-bg\
-    " style=\"background: url(/mnt/sdcard/wisape/com.wisape.android/data/
-    10-13 13:52:59.236 355-355/? I/Web Console﹕
-
-
-    "
-    <div class=\"p-index main\
-    " id=\"con\">
-    <section class=\"m-page hide pages-item\
-    " >
-    <div class=\"m-img\">
-        <div class=\"stage-content edit-area pages-img pages-img-bg\
-        " style=\" text-align:center;word-break:break-all;display: box;display: -webkit-box;display:
-        -moz-box;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-align:center;-moz-box-align:center;background:
-        url(/mnt/sdcard/wisape/com.wisape.android/data/story/20151013021437/tpl5/img/bg.jpg);background-size:
-        cover;background-position:50% 50%;width:100%;height:100%;position: relative;\">
-        <div class=\"stage-content-box\" style=\"-webkit-transform-origin:0 0;\
-        ">
-        <div style=\"float:left;width:12.14rem;margin:3.5rem 1.929rem;padding:5.18rem 0 1.18rem 0;background-color:
-             rgba(255,255,255,0.5);border-radius: 0.5rem;position:relative;\
-        "> \t
-        <div class=\"symbol\" style=\"z-index: 999; display: inline-block;top: -2rem; position: absolute;
-             left:50%;margin-left: -3rem;\
-        ">\t
-        <div class=\"pages-img edit-area\
-        ">\t <img data-name=\"img1\" style=\"width:5.4rem;height:5.4rem;border-radius: 2.7rem;border:0.3rem solid #fff;\"
-        src=\"/mnt/sdcard/wisape/com.wisape.android/data/story/20151013021437/tpl5/img/t.jpg\">
-    </div>
-    \t
-</div>
-<div class=\"symbol\" style=\"z-index: 3;\">
-<div class=\"pages-txt
-     edit-area\" style=\"font-size:0.78rem;color:#000;font-weight: bold\">                                    JackeyWisape                                </div>                            </div>
-<div class=\"symbol\" style=\"z-index: 3;\">
-<div class=\"pages-txt
-     edit-area\" style=\"font-size:0.533rem;color:#000;\">                                    Co-founder                                </div>                            </div>
-<div class=\"symbol\" style=\"z-index: 3;\">
-<div class=\"pages-txt
-     edit-area\" style=\"margin-top:1rem;font-size:0.444rem;line-height:0.888rem;color:#448aff;text-decoration:underline;\">                                    Email: support@wisape.com
-<br>                                    Tel:(702) 825-1558<br>                                    Tel:(702) 825-1558
-<br>                                    Site:www.wisape.com
-<br>                                    Adress:Room 8001 California, Mountain View,
-<br>                                    Amphitheatre Pkwy                                </div>                            </div>                        </div>                    </div>                </div>            </div> </section>
-<section class=\"u-arrow\"><img src=\"file:///android_asset/www/public/img/btn01_arrow.png\"/>
-</section></div>" at file:///android_asset/www/public/js/app-main.js:82
-10-13 14:17:22.376      355-355/? I/Web Console﹕
-
-
-/mnt/sdcard/wisape/com.wisape.android/data/template/tpl5/img/bg.jpg,
-/mnt/sdcard/wisape/com.wisape.android/data/template/tpl5/img/t.jpg,
-/mnt/sdcard/wisape/com.wisape.android/data/template/tpl2/img/bg.jpg?type=stage&id=91,
-/mnt/sdcard/wisape/com.wisape.android/data/template/tpl2/img/icon-earth.png?type=stage&id=91,
-/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/bg.jpg?type=stage&id=90,
-/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/icon-earth.png?type=stage&id=90,
-/mnt/sdcard/wisape/com.wisape.android/data/template/tpl1/img/icon-earth.png?type=stage&id=90,
-/mnt/sdcard/wisape/com.wisape.android/data/template/tpl4/img/bg.jpg,
-mnt/sdcard/wisape/com.wisape.android/data/template/tpl4/img/icon-earth.png,
-/mnt/sdcard/wisape/com.wisape.android/data/template/tpl3/img/bg.jpg,
-/mnt/sdcard/wisape/com.wisape.android/data/template/tpl3/img/icon-earth.png at file:///android_asset/www/public/js/app-main.js:215
-10-13 14:19:28.581      355-355/? I/Web Console﹕
+</div>            ,
+<div class="stage-content edit-area pages-img pages-img-bg"
+     style=" text-align:center;word-break:break-all;display: box;display: -webkit-box;display: -moz-box;-webkit-box-pack:center;-moz-box-pack:center;-webkit-box-align:center;-moz-box-align:center;background: url(/storage/emulated/0/wisape/com.wisape.android/data/story/20151017093232/ume/img/bg.jpg?type=stage&amp;id=98);background-size: cover;background-position:50% 50%;width:100%;height:100%;position: relative;">
+    <div class="stage-content-box" style="-webkit-transform-origin:0 0;">
+        <div style="float:left;width:12.14rem;margin:3.5rem 1.929rem;padding:5.18rem 0 1.18rem 0;background-color: rgba(255,255,255,0.5);border-radius: 0.5rem;position:relative;">
+            <div class="symbol"
+                 style="z-index: 999; display: inline-block;top: -2rem; position: absolute; left:50%;margin-left: -3rem;">
+                <div class="pages-img edit-area"><img data-name="img1"
+                                                      style="width:5.4rem;height:5.4rem;border-radius: 2.7rem;border:0.3rem solid #fff;"
+                                                      src="/storage/emulated/0/wisape/com.wisape.android/data/story/20151017093232/ume/img/t.jpg?type=stage&amp;id=98">
+                </div>
+            </div>
+            <div class="symbol" style="z-index: 3;">
+                <div clas
+                     10-17 21:33:15.259 6615-6615
+                /? I/chromium﹕ [INFO:CONSOLE(771)]
