--- a/app/src/main/assets/www/public/css/editor_index.css
+++ b/app/src/main/assets/www/public/css/editor_index.css
@@ -223,6 +223,7 @@ a {text-decoration: none;color:inherit;}
 }
 .header{
     height: 2.37rem;line-height: 2.37rem;overflow: hidden;
+    position: fixed;top:0;left:0;width:100%;z-index: 1000;background: #fff;
 }
 .header .tit {vertical-align: top;font-size:0.8rem;color:#2d3437;margin-left:0.4rem;}
 .header .icon-arrow-left,
@@ -251,6 +252,7 @@ a {text-decoration: none;color:inherit;}
     border-bottom:1px solid #e0e1e2;
     position:relative;
     overflow: hidden;
+    margin-top:2.37rem;
 }
 .tpl-page-cat .hd ul {
 }
@@ -271,7 +273,7 @@ a {text-decoration: none;color:inherit;}
 }
 .tpl-page-cat .bd {padding:0.71rem 0;height:6.45rem;width:100%;position:relative;overflow: hidden; }
 .tpl-page-cat .bd ul {position: absolute; z-index: 1;}
-.tpl-page-item {width:2.96rem;height:5.03rem;float:left;position: relative;margin-left:0.59rem;overflow: hidden;box-sizing: border-box;}
+.tpl-page-item {width:3.1rem;height:5.03rem;float:left;position: relative;margin-left:0.59rem;overflow: hidden;box-sizing: border-box;}
 .tpl-page-item .icon-tags-hot,.tpl-page-item .icon-tags-new {display:none;width:18px;height:28px;position: absolute;left:0;top:0;}
 .tpl-page-item .stage-thumb {width:100%;height:100%;}
 .tpl-page-item-name {font-size:0.6rem;height:1rem;line-height:1rem;overflow:hidden;color:#fff;font-weight:bold;background-color:rgba(0,0,0,0.4);padding:0.07rem 0;text-align: center;position: absolute;bottom:0;width:2.96rem;left:0;}
@@ -279,12 +281,14 @@ a {text-decoration: none;color:inherit;}
 .tpl-page-item .download-progress-bar { position: absolute; left: 0.15rem; bottom: 1.2rem;width:2.66rem;}
 .tpl-page-item.active {border:0.1rem solid #52b502;}
 
-.pages {width:100%;height:13.4rem;margin:0.8rem 0;position:relative;overflow: hidden;}
-.pages li {width:9.78rem;height:13.4rem;float:left;position: relative;margin-left:1.2rem;opacity: 0.5;}
+.pages {width:100%;margin:0.8rem 0;position:relative;overflow: hidden;}
+.pages li {width:9.78rem;height:13.4rem;float:left;position: relative;margin-left:1.2rem;opacity: 0.5;-webkit-transform:translate3d(0,0,0);}
 .pages li.active  {opacity: 1}
 .pages li .count {z-index:999;position: absolute;left:0;bottom:0;background:rgba(82,181,2,0.5);color:#fff;font-size:14px;padding:2px 6px;}
 .pages-item .pages-item-thumb {width:100%;}
 .pages .stage-content {border-radius: 0.2rem;}
+.pages-big {margin-top:2.37rem;}
+.pages-big li {width:11.31rem;height:16.14rem;}
 
 .story-page-list {width:100%;overflow: hidden}
 .story-page-list .icon-correct {
@@ -298,7 +302,7 @@ a {text-decoration: none;color:inherit;}
     z-index: 999;
 }
 .story-page-list .selected  .icon-correct {display: block}
-.story-page-list {padding-left:0.2rem;}
+.story-page-list {padding-left:0.2rem;margin-top:2.37rem;}
 .story-page-list .tpl-page-item {
     width:4.7rem;
     height: 6.43rem;
@@ -369,8 +373,8 @@ a {text-decoration: none;color:inherit;}
 .ui-dialog{
     overflow: hidden;
     margin: 0 auto;
-    z-index: 10002;
-    position:absolute;
+    z-index: 100002;
+    position:fixed;
     left: 0;
     top: -10000px;
     display: none;
@@ -382,13 +386,15 @@ a {text-decoration: none;color:inherit;}
 }
 /** mask */
 .ui-mask{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
+    bottom:0;
+    right:0;
     background: #888;
     opacity: 0.5;
     display: none;
-    z-index: 10001;
+    z-index: 100001;
     -webkit-transform: translateZ(0);
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
     -webkit-user-select: none;
@@ -412,7 +418,7 @@ a {text-decoration: none;color:inherit;}
     padding:0 20px 30px 20px;
     color:#999;
 }
-.ui-dialog-btns {float:right;}
+.ui-dialog-btns {float:right;width:100%;overflow:hidden;text-align: right}
 .ui-dialog-btns a {display:inline-block;padding:10px 20px;color:#999;}
 .ui-dialog-btns a.btn-submit {color:green;}
 .input-href {width:100%;padding:10px 0;border-bottom:1px solid green;}
@@ -421,12 +427,17 @@ a {text-decoration: none;color:inherit;}
 
 .stage { border-radius: 5px;overflow: hidden;}
 #editorText {text-align: center;}
-#editorText .pages {width:11.2rem;height:15.34rem;margin:0.5rem 2.4rem;}
+#editorText .pages {width:11.2rem;height:15.34rem;margin:2.87rem 2.4rem 0.5rem 2.4rem;}
 #editorText .pages .count {display: none}
 .stage-content .stage-content-box {
     -moz-transform:scale(0.61);
     -webkit-transform:scale(0.61);
     -o-transform:scale(0.61);
+}
+.pages-big .stage-content .stage-content-box {
+    -moz-transform:scale(0.7);
+    -webkit-transform:scale(0.7);
+    -o-transform:scale(0.7);
 }
 .story-page-list .stage-content-box {
     -moz-transform:scale(0.3);
