--- a/app/src/main/assets/www/public/css/preview.css
+++ b/app/src/main/assets/www/public/css/preview.css
@@ -2,12 +2,13 @@
     display: inline-block;
     background-repeat: no-repeat;
     background-position: center center;
-    width: 48px;
-    height: 48px;
+    width: 2.4rem;
+    height: 2.4rem;
     background-size: auto 70%;
 }
 .icon-publish-circle{
     background-image: url(../img/icon-publish-circle.png);
+    background-size: auto 90%;
 }
 .icon-pencil-circle{
     background-image: url(../img/icon-pencil-circle.png);
@@ -16,5 +17,5 @@
     background-image: url(../img/icon-arrow-left-cirle.png);
 }
 .count {display: none;}
-#audio-btn {top:80px;right:20px;}
+#audio-btn {top:2.8rem;right:28px;}
 
