--- a/app/src/main/assets/www/views/mobile2.html
+++ b/app/src/main/assets/www/views/mobile2.html
@@ -114,6 +114,7 @@
 </div>
 
 <script type="text/javascript" src="../public/js/jquery.easing.1.3.js"></script>
+<script src="../public/js/preview.js"></script>
 <script type="text/javascript" src="../public/js/page_scroll_bx.js"></script>
 </body>
 </html>
