--- a/app/src/main/assets/www/views/test.html
+++ b/app/src/main/assets/www/views/test.html
@@ -265,7 +265,7 @@
 
 <script src="../public/js/template.js"></script>
 <script src="../public/js/hammer.min.js"></script>
-<script src="../public/js/iscroll-lite.js"></script>
+<script src="../public/js/iscroll.js"></script>
 <script src="../public/js/animation.js"></script>
 
 <script src="../public/js/app-main.js"></script>
