--- a/app/src/main/assets/www/public/css/editor_index.css
+++ b/app/src/main/assets/www/public/css/editor_index.css
@@ -271,7 +271,7 @@ a {text-decoration: none;color:inherit;}
     color:#52b502;
     border-bottom:2px solid #52b502;
 }
-.tpl-page-cat .bd {padding:0.71rem 0;height:6.45rem;width:100%;position:relative;overflow: hidden; }
+.tpl-page-cat .bd {padding:0.71rem 0.59rem 0.71rem 0;height:6.45rem;width:100%;position:relative;overflow: hidden; }
 .tpl-page-cat .bd ul {position: absolute; z-index: 1;}
 .tpl-page-item {width:3.1rem;height:5.03rem;float:left;position: relative;margin-left:0.59rem;overflow: hidden;box-sizing: border-box;}
 .tpl-page-item .icon-tags-hot,.tpl-page-item .icon-tags-new {display:none;width:18px;height:28px;position: absolute;left:0;top:0;}
