--- a/app/src/main/assets/www/public/css/mod1.css
+++ b/app/src/main/assets/www/public/css/mod1.css
@@ -289,7 +289,7 @@ left:50%;margin-left:-15px;-webkit-animation: move2 2s infinite;}
 	overflow: hidden;
 	position: fixed;
 	right: 10px;
-	top: 10px;
+	top: 3rem;
 	z-index: 200;
 	width: 1.9rem;
 	height: 1.9rem;
